Update to 1.10.2 Part 3